# DevInsight

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  devlog_20240215_1056.md
.github/workflows/: rust.yml
logs/: logcat_20250210_225120.jsonl  logcat_20250210_225202.jsonl  logcat_20250211_214157.jsonl  logcat_20250211_214223.jsonl
src/: main.rs  storage.rs  tui.rs
test_logs/: logcat_20250211_194646.jsonl  logcat_20250211_195155.jsonl
